--- a/turing/package.json
+++ b/turing/package.json
@@ -41,5 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://kernelexplorer.site/turing"
+  "homepage": "https://kernelexplorer.site/turing",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
