--- a/turing/package.json
+++ b/turing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turing",
-  "version": "0.1.0",
+  "version": "0.1.6.2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,7 +18,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "axios": "^0.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +43,7 @@
     ]
   },
   "homepage": "https://kernelexplorer.site/turing",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
 }
